# -Qt_coursework

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Qt类完整清单.md  README.md  STAGE.md  STAGED_COMMIT_GUIDE.md  add_glossary.js  align_slide10.js  build_desktop.bat  build_frontend.bat  build_now.bat  check_depth.js  check_slide11.js  check_slide13.js  check_slides.js  combine.py  combine_slides.py  combined.html  count_slides.py  count_slides2.py  extract_pages.py  extract_titles.py  extract_titles2.py  find_slides.js  fix_css.js  fix_layout_corruption.js  fix_page_nums.js  fix_redesign.py  fix_slide10_11.js  fix_slide10_step3.js  fix_slide11.js  fix_slide11_layout.js  fix_slide14_table.js  fix_slide15.js  fix_slide15_overflow.js  fix_slide19.js  fix_slide4_align.js  fix_slide4_align_f1.js  fix_slide4_align_more.js  (+55 more)
02_Executable/: ai_server.py  qwen_server.py  start.bat  start_desktop.bat  代码检查报告_简历与布局.md  操作指南.txt  演示流程手册.md  示例课程数据.txt
02_Executable/frontend_dist/: index.html
02_Executable/frontend_dist/assets/: Achievements-AYJBWXxS.css  Achievements-B6pHuij8.js  Achievements-BAWr22g1.js  Achievements-BRRdwwc9.js  Achievements-Bp6FmZmw.js  Achievements-Bq4hDTzu.js  Achievements-BsNvjwln.js  Achievements-C54-5t6s.js  Achievements-CFtgcTzC.js  Achievements-CJ_EOzEa.css  Achievements-CgXljIO9.js  Achievements-CqvcWlbP.js  Achievements-CuCR2NIA.css  Achievements-CufZIbRd.css  Achievements-D-uNTm_i.js  Achievements-D14IWB8D.js  Achievements-D1x_gmEh.js  Achievements-DJ-xgvAw.js  Achievements-DN_38-jy.js  Achievements-DPi26edf.css  Achievements-DQZWdbx0.js  Achievements-DRFNaGJ8.js  Achievements-DbcoBBxA.js  Achievements-Dv2xWed1.js  Achievements-GQQDcRET.css  Achievements-GuBIC-C5.js  Achievements-f0ZQLKHR.js  Achievements-npQGAnJz.js  Achievements-sCYv31O1.js  Achievements-wINpQDHK.css  Activities-5qxYE-mG.js  Activities-B3wk7eOg.js  Activities-B6iU0ZZF.js  Activities-B746TDlS.css  Activities-BDwSseHZ.js  Activities-BPUwgwI2.js  Activities-BPWW3ziW.js  Activities-BTSAJXjT.js  Activities-BY0ugF1t.js  Activities-BdgXGrSW.css  (+363 more)
02_Executable/resources/: schema.sql
03_Reports/: AI后端与数据正则化解析报告.md  final一人——技术说明文档.md  midterm_pdf_style.css  团队成员分工说明.md  系统设计与完善全记录.md  软件体系结构与设计模式-期中报告.html  软件体系结构与设计模式-设计报告.docx  软件体系结构与设计模式-设计报告.md
04_Presentation/: glm评估结果.docx
05_RunGuide/: GitHub提交记录说明.md  运行说明.md
docs/: AI_ASSISTANT_GUIDE.md  AI_ASSISTANT_IMPROVEMENTS.md  AI_ASSISTANT_SUMMARY.md  ARCHITECTURE.md  COMPONENTS.md  DEVELOPMENT_GUIDE.md  TECHNICAL_DOCS_UPDATE.md  UPDATE_SUMMARY.md
docs/archive/source-recovery/: MainWindow.corrupted-snapshot.20260428_2119.cpp  MainWindow.encoding-recovery.20260427.cpp  MainWindow.failed-split.20260428_2124.cpp  MainWindow.pre-cleanup.20260429.cpp
ppt-output/: preview.html  style.json
ppt-output/slides/: 1.html  10.html  11.html  12.html  13.html  14.html  15.html  16.html  17.html  18.html  19.html  2.html  20.html  3.html  4.html  5.html  6.html  7.html  8.html  9.html
resources/: resources.qrc  schema.sql
slides/: 1.html  10.html  11.html  12.html  13.html  14.html  15.html  16.html  17.html  18.html  19.html  2.html  3.html  4.html  5.html  6.html  7.html  8.html  9.html
src/: main.cpp  main_desktop.cpp
src/api/: AchievementApi.h  ActivityApi.h  AiApi.h  AnalyticsApi.h  AuthApi.h  CourseApi.h  DashboardApi.h  ExperienceApi.h  GoalApi.h  ImportApi.h  JobApi.h  ResumeApi.h  RoleApi.h  TimelineApi.h
src/client/: MainWindow.cpp  MainWindow.h
src/client/core/: AiContextMediator.cpp  AiContextMediator.h  AppShellController.h  BackendRuntimeController.cpp  BackendRuntimeController.h  CrudPageController.cpp  CrudPageController.h
src/client/dialogs/: AchievementEditorDialog.cpp  AchievementEditorDialog.h  CourseEditorDialog.cpp  CourseEditorDialog.h  GoalEditorDialog.cpp  GoalEditorDialog.h  JobEditorDialog.cpp  JobEditorDialog.h  PeerEditorDialog.cpp  ProfileEditorDialog.cpp  RoleEditorDialog.cpp  RoleEditorDialog.h
src/client/pages/: AchievementsPage.cpp  AchievementsPage.h  ActivitiesPage.cpp  ActivitiesPage.h  AnalysisPage.h  BasePage.cpp  CoursesPage.cpp  GoalsPage.cpp  GoalsPage.h  ImportsPage.cpp  JobsPage.cpp  JobsPage.h  OverviewPage.cpp  ResumePage.h  RolesPage.h  TimelinePage.h
src/client/utils/: UiHelpers.h
src/client/widgets/: AiConversationWidget.cpp  AiConversationWidget.h  AiPanelWidget.cpp  AiPanelWidget.h  AiStatusBar.h  CrudPageShell.h  MetricGridWidget.cpp  MetricGridWidget.h  NavigationListWidget.cpp  NavigationListWidget.h  PeerBenchmarkWidget.cpp  PeerBenchmarkWidget.h  ResumeCandidatePanel.cpp  ResumeCandidatePanel.h  ResumeEditorPanel.cpp  ResumeEditorPanel.h  ResumePreviewDialog.cpp  ResumePreviewDialog.h  ResumePreviewWidget.cpp  ResumePreviewWidget.h  SemesterAnalysisWidget.cpp  SemesterAnalysisWidget.h  SidebarWidget.cpp  SidebarWidget.h  StudentInfoCard.cpp  StudentInfoCard.h  SuggestionListWidget.cpp  (+5 more)
src/config/: Version.h.in
src/dao/: AchievementDao.h  ActivityDao.h  CourseDao.h  DaoBase.cpp  DaoBase.h  ExperienceDao.h  GoalDao.h  JobDao.h  PeerBenchmarkDao.h  RoleDao.h  UserDao.h
src/model/: Achievement.h  Activity.h  Course.cpp  Course.h  Experience.h  Goal.h  ImportErrorItem.h  ImportResult.h  Job.h  JobRequirement.h  PeerBenchmark.h  Role.h  User.h
src/server/: HttpServer.h
src/service/: AchievementService.h  ActivityService.h  AiService.cpp  AiService.h  AnalyticsService.h  AuthService.h  CourseService.h  DashboardService.h  ExperienceService.h  GoalService.h  ImportService.h  JobService.h  ResumeService.h  RoleService.h
src/util/: JsonUtils.h  Logger.h
stage_increments/: ai_server.py  requirements.txt  技术解析文档-组员A(API层与路由开发).md  技术解析文档-组长(架构设计与管理).md  期末演示演讲稿与整体规划.docx  软件体系结构与设计模式-设计报告.docx  软件体系结构与设计模式-设计报告.md
stage_increments/docs/: README_UPDATE_SUMMARY.md
stage_increments/stage2_desktop_shell/: README.md  STAGE.md
stage_increments/stage3_business_crud/: README.md  STAGE.md
stage_increments/stage4_advanced_features/: README.md  STAGE.md
stage_increments/stage5_docs_submission/: README.md  STAGE.md  技术解析文档-组长(架构设计与管理)-v2.md
tests/: crud_regression.py  smoke_test.cpp
(+33 files in other folders)
